k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eba-dashboard-server
  namespace: data-ingestion
spec:
  selector:
    app: eba-dashboard-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
